--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -138,10 +138,10 @@
            </button>
         </div>
         <div class="modal-body">
-           <p>Are you sure you want to delete employee ?</p>
+           <p>Are you sure you want to delete employee {{deleteEmployee?.name}}?</p>
            <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-              <button  class="btn btn-danger" data-dismiss="modal">Yes</button>
+              <button (click)="onDeleteEmloyee(deleteEmployee?.id || -1)" class="btn btn-danger" data-dismiss="modal">Yes</button>
            </div>
         </div>
      </div>
